[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/bin.svg" type="Texture" id=1]
[ext_resource path="res://scenes/elementUI/PropertiesDispay/ListingItem.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=33]
font_path = "res://assets/fonts/noto_sans_ui_bold.ttf"

[sub_resource type="DynamicFont" id=32]
size = 11
use_filter = true
font_data = SubResource( 33 )

[node name="ListingItem" type="HBoxContainer"]
margin_right = 334.0
margin_bottom = 26.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="index" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_right = 150.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 32 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="value" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 154.0
margin_right = 304.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 32 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 308.0
margin_right = 334.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 0 )
texture = ExtResource( 1 )
expand = true

[connection signal="focus_exited" from="index" to="." method="_on_index_focus_exited"]
[connection signal="text_entered" from="index" to="." method="_on_index_text_entered"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
